Fixed #8141 - Buttons progress bar is broken in RTL

--- a/src/defaultV2-theme/blocks/sd-progress-buttons.scss
+++ b/src/defaultV2-theme/blocks/sd-progress-buttons.scss
@@ -277,3 +277,28 @@
   width: 100%;
   margin: auto;
 }
+
+[dir="rtl"],
+[style*="direction:rtl"],
+[style*="direction: rtl"] {
+
+  .sd-progress-buttons__list {
+    li {
+      &:not(:first-child)>.sd-progress-buttons__connector {
+        right: unset;
+        left: calc(50% + 4px);
+      }
+    }
+  }
+
+  .sd-progress-buttons--numbered {
+    .sd-progress-buttons__list {
+      li {
+        &:not(:first-child)>.sd-progress-buttons__connector {
+          right: unset;
+          left: calc(50% + 8px);
+        }
+      }
+    }
+  }
+}
